CFA and Remnant overlapp issue fixed

--- a/public/MOM/css/style.css
+++ b/public/MOM/css/style.css
@@ -89,6 +89,7 @@ hr {
     padding: 2px;
     border-radius: 5px;
     margin: 0px 1px;
+    font-size: 9px;
 }
 
 h1,
